...
    }
    handleLogin(inputs);
  };

  return (
    <>
      <Text style={styles.header}>Weedify</Text>
      <Card containerStyle={styles.card}>
        <Text style={styles.text}>Email</Text>
        <Controller
          control={control}
          rules={{
            pattern: {
...
              inputContainerStyle={styles.inputContainer}
              onBlur={onBlur}
              onChangeText={onChange}
              value={value}
              autoCapitalize="none"
              errorMessage={errors.email?.message}
              testID="email-input"
            />
          )}
          name="email"
        />

        <Text style={styles.text}>Password</Text>
...
                </TouchableOpacity>
              }
              onBlur={onBlur}
              onChangeText={onChange}
              value={value}
              errorMessage={errors.password?.message}
              testID="password-input"
            />
          )}
          name="password"
        />
        <Button
          buttonStyle={styles.button}
          containerStyle={styles.buttonContainer}
          titleStyle={styles.buttonTitle}
          title="Login"
          onPress={handleSubmit(doLogin)}
          testID="login-button"
        />
      </Card>
      <Text style={styles.bottomText}>Or create an account:</Text>
    </>
  );
};
...
