...
                  style={styles.input}
                  inputContainerStyle={styles.inputContainer}
                  value={currentIngredient}
                  onChangeText={setCurrentIngredient}
                  autoCapitalize="sentences"
                  placeholder="Ingredient"
                  testID="ingredient-input"
                />

                <View style={styles.ingredientsContainer}>
                  <View
                    style={{flex: 1.5, marginHorizontal: 10}}
                    testID="unit-input"
...
