...
      )}
      <Button
        buttonStyle={styles.button}
        containerStyle={styles.buttonContainer}
        titleStyle={styles.buttonTitle}
        onPress={toggleRegister}
        testID="toggle-login"
      >
        {displayRegister ? 'Login' : 'Register'}
      </Button>
      </LinearGradient>
    </>
  );
...
